--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "homepage": "https://fabpot-glitch.github.io/frontend",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "deploy-storybook": "npm run build-storybook && npx gh-pages -d storybook-static",
     "chromatic": "npx chromatic --project-token=chpt_21c730d622bd68f"
   },
   "dependencies": {
@@ -15,16 +17,18 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/addon-links": "^8.4.2",
-    "@storybook/addon-onboarding": "^8.4.2",
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-links": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.2",
-    "vite": "^7.1.12"
+    "vite": "^7.1.12",
+    "gh-pages": "^5.0.0"
   }
 }
